<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="datepicker_sun">日</string>
    <string name="datepicker_mon">一</string>
    <string name="datepicker_tue">二</string>
    <string name="datepicker_wed">三</string>
    <string name="datepicker_thu">四</string>
    <string name="datepicker_fri">五</string>
    <string name="datepicker_sat">六</string>

</resources>
