<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_datepicker_title"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <ImageView
            android:id="@+id/iv_datepicker_left_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/datepicker_ic_left_arrow" />

        <cn.aigestudio.datepicker.Indicator.view.IndicatorView
            android:id="@+id/indicator_datepicker"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:id="@+id/iv_datepicker_right_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/datepicker_ic_right_arrow" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cacaca" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp"
            android:paddingTop="12dp">

            <TextView
                style="@style/datepicker_week_text"
                android:text="@string/datepicker_sun" />

            <TextView
                style="@style/datepicker_week_text"
                android:text="@string/datepicker_mon" />

            <TextView
                style="@style/datepicker_week_text"
                android:text="@string/datepicker_tue" />

            <TextView
                style="@style/datepicker_week_text"
                android:text="@string/datepicker_wed" />

            <TextView
                style="@style/datepicker_week_text"
                android:text="@string/datepicker_thu" />

            <TextView
                style="@style/datepicker_week_text"
                android:text="@string/datepicker_fri" />

            <TextView
                style="@style/datepicker_week_text"
                android:text="@string/datepicker_sat" />

        </LinearLayout>

        <cn.aigestudio.datepicker.views.MonthView
            android:id="@+id/monthView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>